chore(agenstra): remove security-critical docker images
remove docker images that poke holes in the security of the virtual
ai workspaces to ensure full encapsulation of opencode and respective
container files
